# amplifier-bundle-routing-matrix

./: .triage-prompt  AGENTS.md  GUIDANCE.md  ISSUE_HANDLING.md  Makefile  README.md
.amplifier-resolve/: implement.dot  resolve-router.dot  review.dot  settings.yaml  simple-fix.dot  triage-dynamic.dot  triage-hitl.dot  triage-review-resolve-hitl.dot  triage-review-resolve.dot  triage.dot
.github/amplifier/: investigate-recipe.yaml  pr-review-recipe.yaml  reproduce-recipe.yaml  triage-context.md  triage-review.dot
.github/workflows/: investigate.yml  issue-triage.yml  pr-review.yml  triage-continue.yml
context/: role-definitions.md
docs/: MATRIX_CURATOR_GUIDE.md
modules/hooks-routing/: pyproject.toml
modules/hooks-routing/amplifier_module_hooks_routing/: __init__.py  matrix_loader.py  resolver.py
modules/hooks-routing/tests/: conftest.py  test_init.py  test_resolver.py
routing/: balanced-litellm.yaml  balanced.yaml  economy.yaml  openai.yaml  quality.yaml
skills/role-definitions/: SKILL.md
test/: triage-dry-run.dot
test/events/: pr-review.json  routing-matrix.json  simple.json
